edit team width

--- a/public/03-blog.html
+++ b/public/03-blog.html
@@ -304,7 +304,7 @@
               <div class="s-team__slide tabs__content active">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Новиков
                         </div><img class="res-i" src="img/team-1.png" alt=""/>
@@ -321,7 +321,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -332,7 +332,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Денис Миловидов
                         </div><img class="res-i" src="img/team-2.png" alt=""/>
@@ -349,7 +349,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -360,7 +360,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Алиса Новикова
                         </div><img class="res-i" src="img/team-3.png" alt=""/>
@@ -377,7 +377,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -388,7 +388,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
                         </div><img class="res-i" src="img/team-4.png" alt=""/>
@@ -405,7 +405,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -416,7 +416,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Андрей Бударинцев
                         </div><img class="res-i" src="img/team-5.png" alt=""/>
@@ -434,7 +434,7 @@
                           <p>Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.</p>
                           <p>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
