--- a/public/04-article.html
+++ b/public/04-article.html
@@ -359,7 +359,7 @@
               <div class="s-team__slide tabs__content active">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Новиков
                         </div><img class="res-i" src="img/team-1.png" alt=""/>
@@ -376,7 +376,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -387,7 +387,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Денис Миловидов
                         </div><img class="res-i" src="img/team-2.png" alt=""/>
@@ -404,7 +404,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -415,7 +415,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Алиса Новикова
                         </div><img class="res-i" src="img/team-3.png" alt=""/>
@@ -432,7 +432,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -443,7 +443,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
                         </div><img class="res-i" src="img/team-4.png" alt=""/>
@@ -460,7 +460,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -471,7 +471,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Андрей Бударинцев
                         </div><img class="res-i" src="img/team-5.png" alt=""/>
@@ -489,7 +489,7 @@
                           <p>Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.</p>
                           <p>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
