--- a/public/index.html
+++ b/public/index.html
@@ -599,7 +599,7 @@
                         <div class="s-team__slide tabs__content active">
                           <div class="s-team__item">
                             <div class="row">
-                              <div class="col-xl-5 col-md-4 align-self-end">
+                              <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Дмитрий Новиков
                                   </div><img class="res-i" src="img/team-1.png" alt=""/>
@@ -616,7 +616,7 @@
                                     </div>
                                     <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                                   </button>
                                 </div>
                               </div>
@@ -627,7 +627,7 @@
                         <div class="s-team__slide tabs__content">
                           <div class="s-team__item">
                             <div class="row">
-                              <div class="col-xl-5 col-md-4 align-self-end">
+                              <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Денис Миловидов
                                   </div><img class="res-i" src="img/team-2.png" alt=""/>
@@ -644,7 +644,7 @@
                                     </div>
                                     <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                                   </button>
                                 </div>
                               </div>
@@ -655,7 +655,7 @@
                         <div class="s-team__slide tabs__content">
                           <div class="s-team__item">
                             <div class="row">
-                              <div class="col-xl-5 col-md-4 align-self-end">
+                              <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Алиса Новикова
                                   </div><img class="res-i" src="img/team-3.png" alt=""/>
@@ -672,7 +672,7 @@
                                     </div>
                                     <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                                   </button>
                                 </div>
                               </div>
@@ -683,7 +683,7 @@
                         <div class="s-team__slide tabs__content">
                           <div class="s-team__item">
                             <div class="row">
-                              <div class="col-xl-5 col-md-4 align-self-end">
+                              <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
                                   </div><img class="res-i" src="img/team-4.png" alt=""/>
@@ -700,7 +700,7 @@
                                     </div>
                                     <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                                   </button>
                                 </div>
                               </div>
@@ -711,7 +711,7 @@
                         <div class="s-team__slide tabs__content">
                           <div class="s-team__item">
                             <div class="row">
-                              <div class="col-xl-5 col-md-4 align-self-end">
+                              <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Андрей Бударинцев
                                   </div><img class="res-i" src="img/team-5.png" alt=""/>
@@ -729,7 +729,7 @@
                                     <p>Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.</p>
                                     <p>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                                   </button>
                                 </div>
                               </div>
@@ -982,7 +982,7 @@
               <div class="s-team__slide tabs__content active">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Новиков
                         </div><img class="res-i" src="img/team-1.png" alt=""/>
@@ -999,7 +999,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -1010,7 +1010,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Денис Миловидов
                         </div><img class="res-i" src="img/team-2.png" alt=""/>
@@ -1027,7 +1027,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -1038,7 +1038,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Алиса Новикова
                         </div><img class="res-i" src="img/team-3.png" alt=""/>
@@ -1055,7 +1055,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -1066,7 +1066,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
                         </div><img class="res-i" src="img/team-4.png" alt=""/>
@@ -1083,7 +1083,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
@@ -1094,7 +1094,7 @@
               <div class="s-team__slide tabs__content">
                 <div class="s-team__item">
                   <div class="row">
-                    <div class="col-xl-5 col-md-4 align-self-end">
+                    <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Андрей Бударинцев
                         </div><img class="res-i" src="img/team-5.png" alt=""/>
@@ -1112,7 +1112,7 @@
                           <p>Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.</p>
                           <p>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
                         </button>
                       </div>
                     </div>
