--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
           </div><a class="crls_menu" id="menuOpen"><span class="btt-menu"><i></i><i></i><i></i></span><span class="txt">меню</span></a>
         </div>
         <div class="crls-cl crls-tr wow fadeIn" data-wow-delay=".22s">
-          <div class="crls__langs"><span class="crls__current text-white">Eng</span><a href="#">Rus</a>
+          <div class="crls__langs"><a href="#">Eng</a><span class="crls__current text-white">Rus</span>
           </div><a class="crls__call callDown" href="#s-form"><span class="btt-call"><span class="animate">
                 <svg class="icon icon-hand2 ">
                   <use xlink:href="img/svg/sprite.svg#hand2"></use>
